--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.maps_learning">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
    <application
         android:label="maps_learning"
         android:icon="@mipmap/ic_launcher">
@@ -37,5 +40,7 @@
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
+         <meta-data android:name="com.google.android.geo.API_KEY"
+               android:value="AIzaSyC5lCY47-ThGonGk3lPunL_vRaG792Lb2E"/>
     </application>
 </manifest>
