--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_maps_flutter:
   http:
+  provider: ^6.0.1
 
 dev_dependencies:
   flutter_test:
